--- a/pixplot/web/index.html
+++ b/pixplot/web/index.html
@@ -360,11 +360,11 @@
     <div id='header-container'>
       <header id='header' class='no-highlight'></header>
       <div id='header-brand' class='row align-center'>
-        <a href='https://dhlab.yale.edu' target='_blank'>
-          <img id='logo' src='assets/images/dhlab-logo.svg' alt='DHLab logo' />
+        <a href='https://exjpeg.com' target='_blank'>
+          <img id='logo' src='assets/images/pawprint.svg' alt='logo' />
         </a>
-        <a id='app-name-container' class='row align-center' href='https://github.com/YaleDHLab/pix-plot'>
-          <div id='app-name'>PixPlot</div>
+        <a id='app-name-container' class='row align-center' href='https://exjpeg.com'>
+          <div id='app-name'>ExJpeg</div>
         </a>
         <div class='row align-center'>
           <div class='tagline'>Image Fields in a Local Collection</div>
@@ -430,7 +430,7 @@
     <div id='tooltip'></div>
     <!-- Loader -->
     <div id='loader-scene'>
-      <p class='welcome'>This page visualizes a large image collection within an interactive WebGL scene. Each image was processed with an <a href='https://arxiv.org/abs/1409.4842' target='_blank'>Inception</a> Convolutional Neural Network, trained on <a href='http://image-net.org/challenges/LSVRC/2012/' target='_blank'>ImageNet 2012</a>, and projected into a two-dimensional manifold with the <a href='https://github.com/lmcinnes/umap' target='_blank'>UMAP</a> algorithm such that similar images appear proximate to one another.</p>
+      <p class='welcome'>This is an interactive NFT explorer. Each image was processed with a <a href='https://www.tensorflow.org/tutorials/generative/cvae' target='_blank'>CVAE</a>, which was trained on a varierty of NFT image datasets, and projected onto a two-dimensional manifold. Visually similar images should appear close to one another. <a href="https://exjpeg.com">More info here.</a></p>
       <div class='loader-container'>
         <div class='loader-icon'>
           <div class='blocks'>
