--- a/pixplot/web/index.html
+++ b/pixplot/web/index.html
@@ -9,7 +9,7 @@
   <meta http-equiv='ScreenOrientation' content='autoRotate:disabled'>
   <title>ExJpeg | Explore Jpegs</title>
   <meta charset='UTF-8' />
-  <meta name='author' content='Yale Digital Humanities Lab'>
+  <meta name='author' content='Alfalfa Capital'>
 </head>
 
 <body>
@@ -369,7 +369,8 @@
         <div id='app-name'>ExJpeg</div>
       </a>
       <div class='row align-center'>
-        <div class='tagline'>Image Fields in a Local Collection</div>
+        <input id="image-filter-input" placeholder="Filter containing..."/>
+        <button id='jump-button'>Jump</button>
       </div>
     </div>
     <div id='header-controls'>
